2001-06-26  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-sheet.c
	(gnucash_sheet_key_press_event): allow shift-pgup and shift-pgdn
	to go to top & bottom of register respectively.

	* src/register/gnome/datecell-gnome.c (DateDirect): allow '-'
	hotkey to work if there is a full date there, or the cell is
	blank.

	* src/gnome/gnc-html.c: don't handle keypresses, let the gtkhtml
	object do it.

2001-06-25  Dave Peticolas  <dave@krondo.com>

	* src/engine/sql/kvp-sql.c: include gnc-engine-util.h for stpcpy

	* src/engine/gnc-engine-util.c (gnc_stpcpy): add func

	* src/engine/gnc-engine-util.h: add definition of gnc_stpcpy.
	if stpcpy is not available, define stpcpy as gnc_stpcpy.

	* src/gnc-ui-util.c: remove gnc_stpcpy

	* src/gnome/window-main-summarybar.c: fix bug in euro profit
	calculation. use share prices in calculating totals.

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/scm/report/balance-sheet.scm: Daniel Hagerty's patch
	to add an unrealized gain/loss line to the balance sheet.

2001-06-24  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/account-piecharts.scm: fix sign bug

	* src/engine/sql/kvp-sql.c: same as below

	* src/engine/sql/txn.c: same as below

	* src/engine/sql/price.c: same as below

	* src/engine/sql/checkpoint.c: use strtoll instead of atoll

2001-06-24  Kevin Finn  <kevinfinn@mediaone.net>

	* src/gnome/dialog-transfer.[ch]: reformatted my previous changes
	to 80 cols.  Added interface to specify whether description
	quickfill will be based on From or To account splits.  Enhance
	quickfill to also select the appropriate account in the account
	tree for the matched transaction.

	* src/gnome/window-reconcile.c: reformatted my previous changes to
	80 cols.  Change the auto interest xfer dialog so that it
	quickfills based on the reconcile account, rather than always on
	the From account.

2001-06-24  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: credits
