@@ -163,9 +163,14 @@ static gboolean
 account_type_handler (xmlNodePtr node, gpointer act)
 {
     int type;
+    char *string;
 
-    xaccAccountStringToType(node->xmlChildrenNode->content, &type);
+    string = xmlNodeGetContent (node->xmlChildrenNode);
+    xaccAccountStringToType(string, &type);
+    xmlFree (string);
+
     xaccAccountSetType((Account*)act, type);
+
     return TRUE;
 }
 
